# leetcode-solutions

./: .editorconfig  .gitignore  README.md  go.mod
python_solutions/: common_datastructures.py  helpers.py  pyproject.toml
python_solutions/lc_1207_unique_number_of_occurrences/: lc_1207_unique_number_of_occurrences.py  test_lc_1207_unique_number_of_occurrences.py
python_solutions/lc_1299_replace_elements_with_gt_element_on_right/: lc_1299_replace_elements_with_gt_element_on_right.py  test_lc_1299_replace_elements_with_gt_element_on_right.py
python_solutions/lc_1346_check_if_n_and_its_double_exist/: lc_1346_check_if_n_and_its_double_exist.py  test_lc_1346_check_if_n_and_its_double_exist.py
python_solutions/lc_1351_count_negative_numbers_in_a_sorted_matrix/: lc_1351_count_negative_numbers_in_a_sorted_matrix.py  test_lc_1351_count_negative_numbers_in_a_sorted_matrix.py
python_solutions/lc_136_single_number/: lc_136_single_number.py  test_lc_136_single_number.py
python_solutions/lc_1394_find_lucky_integer_in_an_array/: lc_1394_find_lucky_integer_in_an_array.py  test_lc_1394_find_lucky_integer_in_an_array.py
python_solutions/lc_141_linked_list_cycle/: lc_141_linked_list_cycle.py  test_lc_141_linked_list_cycle.py
python_solutions/lc_1422_maximum_score_after_splitting_a_string/: README.md  lc_1422_maximum_score_after_splitting_a_string.py  test_lc_1422_maximum_score_after_splitting_a_string.py
python_solutions/lc_142_linked_list_cycle_2/: lc_142_linked_list_cycle_2.py  test_lc_142_linked_list_cycle_2.py
python_solutions/lc_14_longest_common_prefix/: lc_14.py  (+1 more)
(+724 files in other folders)
