[project]
name = "python-solutions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-benchmark>=5.2.3",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.15",
    "faker>=33.3.1",
    "ipython>=8.31.0",
    "pytest>=8.3.4",
    "pytest-subtests>=0.14.2",
    "ruff>=0.9.2",
]
